fixing scrollbars in github log

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -82,11 +82,11 @@ h3 {
   margin: 0 0 0 5px;
   img {
     float: left;
-    margin: 0 0 0 58px;
+    margin: 0 0 0 68px;
   }
   p {
     display: inline-block;
-    width: 262px;
+    width: 252px;
     float: left;
     margin: 0;
   }
@@ -95,7 +95,7 @@ h3 {
     left: 0;
     float: left;
     font-size: 10px;
-    width: 50px;
+    width: 60px;
     text-align: right;
   }
   li {
@@ -106,7 +106,6 @@ h3 {
     }
     padding: 5px 0;
     clear: both;
-    overflow: auto;
     position: relative;
   }
   .gravatar {
@@ -119,4 +118,3 @@ img.gravatar{
   width: 20px;
   height: 20px;
 }
-
